samples/_failures_safe/1761143106_ed57e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b49067a.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_4b49067a.c:172:14: error: ‘TOKEN_IDENT’ undeclared (first use in this function); did you mean ‘TOKEN_EOF’?
  172 |         case TOKEN_IDENT
      |              ^~~~~~~~~~~
      |              TOKEN_EOF
./samples/SAFE/__tmp_4b49067a.c:172:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4b49067a.c:172:9: error: expected ‘:’ or ‘...’ at end of input
  172 |         case TOKEN_IDENT
      |         ^~~~
./samples/SAFE/__tmp_4b49067a.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b49067a.c:172:9: error: expected declaration or statement at end of input
